Updated the way you specify parts of accordions. This way ... the relevant attributes are classes, so that before the js runs the page will still look styled (the listeners just won't be initialized)

--- a/tests/accordions.html
+++ b/tests/accordions.html
@@ -46,11 +46,11 @@
 
   <h3> Test 1 : Simple -- Single button / single content element </h3>
   
-  <div mw_accordion='SimpleClothing' mw_button>
+  <div mw_accordion='SimpleClothing' class="mw_accordion_button closed">
     Clothings
   </div>
 
-  <ul mw_accordion='SimpleClothing' mw_content>
+  <ul mw_accordion='SimpleClothing' class="mw_accordion_content closed">
     <li> Hat </li>
     <li> Socks </li>
     <li> Shoes </li>
@@ -64,11 +64,11 @@
 
   <h3> Test 2 : Common - Single button / multiple content elements </h3>
   
-  <div mw_accordion='CommonClothing' mw_button>
+  <div mw_accordion='CommonClothing' class="mw_accordion_button closed">
     Clothings
   </div>
 
-  <ul mw_accordion='CommonClothing' mw_content>
+  <ul mw_accordion='CommonClothing' class="mw_accordion_content closed">
     <li> Hat </li>
     <li> Socks </li>
     <li> Shoes </li>
@@ -76,7 +76,7 @@
     <li> Shirts </li>
   </ul>
 
-  <a href='#' mw_accordion='CommonClothing' mw_content> More ... </a>
+  <a href='#' mw_accordion='CommonClothing' class="mw_accordion_content closed"> More ... </a>
   
 </div>
 
@@ -85,11 +85,11 @@
   <h3> Test 3 : Multiple -- Several buttons / several content
   elements, but equal numbers of each </h3>
   
-  <div mw_accordion='MultipleClothing' mw_button>
+  <div mw_accordion='MultipleClothing' class="mw_accordion_button closed">
     Clothings
   </div>
 
-  <ul mw_accordion='MultipleClothing' mw_content>
+  <ul mw_accordion='MultipleClothing' class="mw_accordion_content closed">
     <li> Hat </li>
     <li> Socks </li>
     <li> Shoes </li>
@@ -97,11 +97,11 @@
     <li> Shirts </li>
   </ul>
 
-  <div mw_accordion='MultipleGear' mw_button>
+  <div mw_accordion='MultipleGear' class="mw_accordion_button closed">
     Gear
   </div>
 
-  <ul mw_accordion='MultipleGear' mw_content>
+  <ul mw_accordion='MultipleGear' class="mw_accordion_content closed">
     <li> Sports </li>
     <li> Hiking </li>
     <li> Camping </li>
@@ -109,11 +109,11 @@
     <li> Surfing </li>
   </ul>
 
-  <div mw_accordion='MultipleMusic' mw_button>
+  <div mw_accordion='MultipleMusic' class="mw_accordion_button closed">
     Music
   </div>
 
-  <ul mw_accordion='MultipleMusic' mw_content>
+  <ul mw_accordion='MultipleMusic' class="mw_accordion_content closed">
     <li> CDs </li>
     <li> By Artist </li>
     <li> By Genre </li>
@@ -128,44 +128,44 @@
   <h3> Test 3 : Multiple -- Several buttons / several content
   elements, but unequal numbers of each (more content - per button) </h3>
   
-  <div mw_accordion='UnevenMultipleClothing' mw_button>
+  <div mw_accordion='UnevenMultipleClothing' class="mw_accordion_button closed">
     Clothings
   </div>
 
-  <ul mw_accordion='UnevenMultipleClothing' mw_content>
+  <ul mw_accordion='UnevenMultipleClothing' class="mw_accordion_content closed">
     <li> Hat </li>
     <li> Socks </li>
     <li> Shoes </li>
     <li> Gloves </li>
     <li> Shirts </li>
   </ul>
-  <a href='#' mw_accordion='UnevenMultipleClothing' mw_content> More ... </a>
+  <a href='#' mw_accordion='UnevenMultipleClothing' class="mw_accordion_content closed"> More ... </a>
   
-  <div mw_accordion='UnevenMultipleGear' mw_button>
+  <div mw_accordion='UnevenMultipleGear' class="mw_accordion_button closed">
     Gear
   </div>
 
-  <ul mw_accordion='UnevenMultipleGear' mw_content>
+  <ul mw_accordion='UnevenMultipleGear' class="mw_accordion_content closed">
     <li> Sports </li>
     <li> Hiking </li>
     <li> Camping </li>
     <li> Biking </li>
     <li> Surfing </li>
   </ul>
-  <a href='#' mw_accordion='UnevenMultipleGear' mw_content> More ... </a>
+  <a href='#' mw_accordion='UnevenMultipleGear' class="mw_accordion_content closed"> More ... </a>
 
-  <div mw_accordion='UnevenMultipleMusic' mw_button>
+  <div mw_accordion='UnevenMultipleMusic' class="mw_accordion_button closed">
     Music
   </div>
 
-  <ul mw_accordion='UnevenMultipleMusic' mw_content>
+  <ul mw_accordion='UnevenMultipleMusic' class="mw_accordion_content closed">
     <li> CDs </li>
     <li> By Artist </li>
     <li> By Genre </li>
     <li> By Decade </li>
     <li> Random </li>
   </ul>  
-  <a href='#' mw_accordion='UnevenMultipleMusic' mw_content> More ... </a>
+  <a href='#' mw_accordion='UnevenMultipleMusic' class="mw_accordion_content closed"> More ... </a>
   
 </div>
 
@@ -173,5 +173,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Fri Apr  1 16:42:29 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start --> Last modified: Fri Apr  1 18:28:00 PDT 2011 <!-- hhmts end -->
 </body> </html>
