Forgot to update the example

--- a/tests/accordions.html
+++ b/tests/accordions.html
@@ -28,13 +28,11 @@
   <p>
     To setup an accordion:
     <ol>
-      <li> Add the mw_accordion attribute to the button element and
+      <li> Add the 'mw_accordion' attribute to the button element and
   all of the top level content elements. Set its value to be the name
   of the accordion (which should be unique to the page).</li>
-      <li> Add the mw_button attribute to the button element (no value
-  required).</li>
-      <li> Add the mw_content attribute to the content element(s) (no
-  value required).</li>
+      <li> Add the 'mw_accordion_button' (and optionally 'closed') classes to the button element.</li>
+      <li> Add the 'mw_accordion_content' (and optionally 'closed') classese to the content element(s).</li>
     </ol>
   </p>
   
@@ -173,5 +171,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Fri Apr  1 18:28:00 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start --> Last modified: Fri Apr  1 18:36:47 PDT 2011 <!-- hhmts end -->
 </body> </html>
