--- a/tests/accordions.html
+++ b/tests/accordions.html
@@ -19,10 +19,7 @@
   <p>
     Demo of the accordion widgets. The only thing required to setup
   accordions is to setup you're html properly. Then, onload, the
-  accordion.js file combs the html for the elements you've declared as
-  accordions and sets them up. To see how these accordions were
-  setup, you should look at the page source, since the js added
-  classes onload.
+  accordion.js file adds the listeners appropriately.
   </p>
 
   <p>
@@ -32,7 +29,7 @@
   all of the top level content elements. Set its value to be the name
   of the accordion (which should be unique to the page).</li>
       <li> Add the 'mw_accordion_button' (and optionally 'closed') classes to the button element.</li>
-      <li> Add the 'mw_accordion_content' (and optionally 'closed') classese to the content element(s).</li>
+      <li> Add the 'mw_accordion_content' (and optionally 'closed') classes to the content element(s).</li>
     </ol>
   </p>
   
@@ -171,5 +168,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Fri Apr  1 18:36:47 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start --> Last modified: Fri Apr  1 18:58:10 PDT 2011 <!-- hhmts end -->
 </body> </html>
