Basic zoom-preview widget working. It works on desktop/phone. It still needs bounds checking. It will also need a few additional features to work with belk -- they're modifying existing image src's, so I'll need a modifier rule for our widget to know how to make the image src point to the larger version

--- a/tests/main.html
+++ b/tests/main.html
@@ -6,6 +6,7 @@
     <li> <a href="accordions.html"> Accordions </a> </li>
     <li> <a href="select_list.html"> Select List </a> </li>
     <li> <a href="select_buttons.html"> Select Buttons </a> </li>
+    <li> <a href="zoom_preview.html"> Zoom Preview </a> </li>
   </ul>
 
 </body>
