Added bounds checking to the ZoomPreview

--- a/tests/zoom_preview.html
+++ b/tests/zoom_preview.html
@@ -60,7 +60,7 @@
         
   </div>
   
-  <ul mw-zoom-preview='ZoomPreview' class="mw_zoom_preview mw_container mw_thumbnails">
+  <ul mw-zoom-preview='ZoomPreview' class="mw_zoom_preview mw_thumbnails">
     <li> <img width='30px' height='30px' src='images/pic1.jpeg'/> </li>
     <li> <img width='30px' height='30px' src='images/pic2.jpeg'/> </li>
     <li> <img width='30px' height='30px' src='images/pic3.jpeg'/> </li>
@@ -81,5 +81,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Mon Apr  4 20:18:23 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start --> Last modified: Wed Apr  6 18:58:04 PDT 2011 <!-- hhmts end -->
 </body> </html>
