Cleaned up a bit. Also fixed a bug that broke the existing gallery callbacks

--- a/tests/zoom_preview.html
+++ b/tests/zoom_preview.html
@@ -72,7 +72,7 @@
 <script type='text/javascript'>
   var big_image = document.getElementById("big_image");
   x$().iterate(
-    document.querySelectorAll(".mw_zoom_preview.mw_container.mw_thumbnails img"),
+    document.querySelectorAll(".mw_zoom_preview.mw_thumbnails img"),
     function(elem) {
       elem.addEventListener('click', function(evt){big_image.src=evt.target.src;}, false);
     }
@@ -81,5 +81,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Wed Apr  6 18:58:04 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start --> Last modified: Wed Apr  6 19:09:04 PDT 2011 <!-- hhmts end -->
 </body> </html>
