--- a/tests/zoom_preview.html
+++ b/tests/zoom_preview.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title> Zoom Preview Unit Test</title>
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 <script src="../external-lib/xui-2.0.0.js"></script>
 <script src="../global.js"></script>
 <script src="../zoom_preview.js"></script>
@@ -81,5 +82,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Wed Apr  6 19:09:04 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start --> Last modified: Wed Apr  6 20:18:12 PDT 2011 <!-- hhmts end -->
 </body> </html>
