Tweaked code -- now its agnostic to what thumbnails are in the container -- this way if they're updated (as on belk), everything works

--- a/tests/zoom_preview.html
+++ b/tests/zoom_preview.html
@@ -90,7 +90,7 @@
       <img id="big_image" src="" />
     </div>
 
-    <img mw-zoom-preview='ZoomPreview' class="mw_zoom_button"/>
+    <img class="mw_zoom_button"/>
         
   </div>
   
@@ -115,5 +115,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Thu Apr  7 00:56:47 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start --> Last modified: Thu Apr  7 02:04:21 PDT 2011 <!-- hhmts end -->
 </body> </html>
