Refactored code. Cleaned up namespaces

--- a/tests/select_buttons.html
+++ b/tests/select_buttons.html
@@ -4,7 +4,7 @@
 <title> Select Buttons Unit Tests</title>
 <script src="../external-lib/xui-2.0.0.js"></script>
 <script src="../select_buttons.js"></script>
-<script src="../global.js"></script>
+<script src="../uranium.js"></script>
 <link rel="stylesheet" type='text/css' href='test.css' />
 <link rel="stylesheet" type='text/css' href='select_buttons.css' />
 </head>
