--- a/tests/zoom_preview.html
+++ b/tests/zoom_preview.html
@@ -4,7 +4,7 @@
 <title> Zoom Preview Unit Test</title>
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 <script src="../external-lib/xui-2.0.0.js"></script>
-<script src="../global.js"></script>
+<script src="../uranium.js"></script>
 <script src="../zoom_preview.js"></script>
 <link rel="stylesheet" type='text/css' href='test.css' />
 <link rel="stylesheet" type='text/css' href='zoom_preview.css' />
@@ -158,5 +158,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Tue Apr 19 14:34:33 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start --> Last modified: Fri May  6 15:06:13 PDT 2011 <!-- hhmts end -->
 </body> </html>
