--- a/tests/select_list.html
+++ b/tests/select_list.html
@@ -4,7 +4,7 @@
 <title> Select Lists Unit Tests</title>
 <script src="../external-lib/xui-2.0.0.js"></script>
 <script src="../select_list.js"></script>
-<script src="../global.js"></script>
+<script src="../uranium.js"></script>
 <link rel="stylesheet" type='text/css' href='test.css' />
 <link rel="stylesheet" type='text/css' href='select_lists.css' />
 </head>
