--- a/tests/toggler.html
+++ b/tests/toggler.html
@@ -53,7 +53,7 @@
         AccordionButton, SelectButton instead of just button)
       </div>
 
-      <div data-ur-set='Toggler' >
+      <div data-ur-set='toggler' >
         <div data-ur-toggler-component='button'>
           Clothings
         </div>
@@ -125,7 +125,7 @@
       </div>
       
       <ul data-ur-toggler-component='content' data-ur-id='FoodAccordion'>
-        <li data-ur-set='Toggler' >
+        <li data-ur-set='toggler' >
           <span data-ur-toggler-component='button'> Veggies </span>
           <ul data-ur-toggler-component='content'>
             <li> Beets </li>
@@ -225,5 +225,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Thu May 12 18:28:43 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start --> Last modified: Thu May 12 18:41:12 PDT 2011 <!-- hhmts end -->
 </body> </html>
