Refactored toggler so that the find code will work with select-lists too

--- a/tests/select_list.html
+++ b/tests/select_list.html
@@ -46,24 +46,24 @@
   <p>
   A &lt;ul&gt; is the trigger list in this case.
   </p>
-  
-  <select select-list='Simple'>
-    <option selected='true' value='-1'> -None- </option>
-    <option value='SKU-XS'> XS </option>
-    <option value='SKU-S'> S </option>
-    <option value='SKU-M'> M </option>
-    <option value='SKU-L'> L </option>
-  </select>
+  <div data-ur-set='select-list'>
+    <select data-ur-select-list-component='select'>
+      <option selected='true' value='-1'> -None- </option>
+      <option value='SKU-XS'> XS </option>
+      <option value='SKU-S'> S </option>
+      <option value='SKU-M'> M </option>
+      <option value='SKU-L'> L </option>
+    </select>
+    
 
-
-  <ul select-list='Simple'>
-    <li value='-1'> -None- </li>
-    <li value='SKU-XS'> XS </li>
-    <li value='SKU-S'> S </li>
-    <li value='SKU-M'> M </li>
-    <li value='SKU-L'> L </li>
-  </ul>
-
+    <ul data-ur-select-list-component='content'>
+      <li value='-1'> -None- </li>
+      <li value='SKU-XS'> XS </li>
+      <li value='SKU-S'> S </li>
+      <li value='SKU-M'> M </li>
+      <li value='SKU-L'> L </li>
+    </ul>
+  </div>
  
 </div>
 
