Updated select-list test to work

--- a/tests/select_list.html
+++ b/tests/select_list.html
@@ -77,7 +77,7 @@
     construct the trigger list.
   </p>
   
-  <select select-list='Subset'>
+  <select data-ur-select-list-component='select' data-ur-id='MyUIDSelectList'>
     <option selected='true' value='-1'> -None- </option>
     <option value='SKU-XS'> XS </option>
     <option value='SKU-S'> S </option>
@@ -86,7 +86,7 @@
   </select>
 
 
-  <div select-list='Subset'>
+  <div data-ur-select-list-component='content' data-ur-id='MyUIDSelectList'>
     <span value='SKU-XS'> XS </span>
     <span value='SKU-S'> S </span>
     <span value='SKU-M'> M </span>
