Updated the explanations for each widget

--- a/tests/main.html
+++ b/tests/main.html
@@ -3,7 +3,7 @@
   <h1> Tests / Examples </h1>
 
   <ul>
-    <li> <a href="accordions.html"> Accordions </a> </li>
+    <li> <a href="toggler.html"> Toggler </a> </li>
     <li> <a href="select_list.html"> Select List </a> </li>
     <li> <a href="select_buttons.html"> Select Buttons </a> </li>
     <li> <a href="zoom_preview.html"> Zoom Preview </a> </li>
