--- a/tests/select_list.html
+++ b/tests/select_list.html
@@ -24,19 +24,19 @@
 
 <div class='description'>
   <ol>
-    <li> Set the 'select-list' attribute to a unique name. This
-    should be set on the target &lt;select&gt; tag as well as the trigger list
-    element.</li>
-    <li> Make sure that the elements in your target list have the
+    <li>
+      Group the select's components. (Link to group howto page)
+    </li>
+    <li> Set the 'data-ur-select-list-component' attribute to 'select'
+    on the target &lt;select&gt; tag.</li>
+    <li> Make sure that the elements in your list have the
     same value attributes as the original &lt;option&gt; elements from
     the target &lt;select&gt;</li>
+    <li>
+    Set the 'data-ur-select-list-component' attribute to 'content'
+    on the content list.
+    </li>
   </ol>
-
-  <p>
-    Tip: In v2, the easiest way to construct a trigger list from a
-    &lt;select&gt; element would be to copy the &lt;select&gt;
-    element, then change its tag name, and its children's tag names.
-  </p>
 </div>
 
 <h2> Tests: </h2>
