Updated documentation and re-organized a bit

--- a/tests/select_list.html
+++ b/tests/select_list.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title> Select Lists Unit Tests</title>
-<script src="../external-lib/xui-2.0.0.js"></script>
-<script src="../select_list.js"></script>
-<script src="../uranium.js"></script>
-<link rel="stylesheet" type='text/css' href='test.css' />
-<link rel="stylesheet" type='text/css' href='select_lists.css' />
+<script src="../lib/external/xui-2.0.0.js"></script>
+<script src="../lib/uranium.js"></script>
+<script src="../lib/select_list.js"></script>
+<link rel="stylesheet" type='text/css' href='css/test.css' />
+<link rel="stylesheet" type='text/css' href='css/select_lists.css' />
 </head>
 
 <body suite='SelectLists'>
