--- a/tests/toggler.html
+++ b/tests/toggler.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title> Toggle Unit Tests</title>
-    <script src="../external-lib/xui-2.0.0.js"></script>
-    <script src="../uranium.js"></script>
-    <script src="../toggler.js"></script>
-    <link rel="stylesheet" type='text/css' href='test.css' />
-    <link rel="stylesheet" type='text/css' href='toggler.css' />
+    <script src="../lib/external/xui-2.0.0.js"></script>
+    <script src="../lib/uranium.js"></script>
+    <script src="../lib/toggler.js"></script>
+    <link rel="stylesheet" type='text/css' href='css/test.css' />
+    <link rel="stylesheet" type='text/css' href='css/toggler.css' />
   </head>
 
   <body suite='Togglers'>
@@ -264,5 +264,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Fri May 13 16:54:02 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Fri May 13 19:34:03 PDT 2011 <!-- hhmts end -->
 </body> </html>
