--- a/tests/zoom_preview.html
+++ b/tests/zoom_preview.html
@@ -3,11 +3,11 @@
 <head>
 <title> Zoom Preview Unit Test</title>
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-<script src="../external-lib/xui-2.0.0.js"></script>
-<script src="../uranium.js"></script>
-<script src="../zoom_preview.js"></script>
-<link rel="stylesheet" type='text/css' href='test.css' />
-<link rel="stylesheet" type='text/css' href='zoom_preview.css' />
+<script src="../lib/external/xui-2.0.0.js"></script>
+<script src="../lib/uranium.js"></script>
+<script src="../lib/zoom_preview.js"></script>
+<link rel="stylesheet" type='text/css' href='css/test.css' />
+<link rel="stylesheet" type='text/css' href='css/zoom_preview.css' />
 </head>
 
 <body suite='ZoomPreview'>
@@ -162,5 +162,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start --> Last modified: Fri May 13 17:34:51 PDT 2011 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Fri May 13 19:32:34 PDT 2011 <!-- hhmts end -->
 </body> </html>
