Updated tests to use the bundled file

--- a/tests/toggler.html
+++ b/tests/toggler.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <title> Toggle Unit Tests</title>
-    <script src="../lib/external/xui-2.0.0.js"></script>
-    <script src="../lib/uranium.js"></script>
-    <script src="../lib/toggler.js"></script>
+    <script src="../build/uranium.js"></script>
     <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/toggler.css' />
   </head>
