--- a/tests/zoom_preview.html
+++ b/tests/zoom_preview.html
@@ -1,14 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
-<head>
-<title> Zoom Preview Unit Test</title>
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-<script src="../lib/external/xui-2.0.0.js"></script>
-<script src="../lib/uranium.js"></script>
-<script src="../lib/zoom_preview.js"></script>
-<link rel="stylesheet" type='text/css' href='css/test.css' />
-<link rel="stylesheet" type='text/css' href='css/zoom_preview.css' />
-</head>
+  <head>
+    <title> Zoom Preview Unit Test</title>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+    <script src="../build/uranium.js"></script>
+    <link rel="stylesheet" type='text/css' href='css/test.css' />
+    <link rel="stylesheet" type='text/css' href='css/zoom_preview.css' />
+  </head>
 
 <body suite='ZoomPreview'>
 
