--- a/tests/select_buttons.html
+++ b/tests/select_buttons.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 <title> Select Buttons Unit Tests</title>
-<script src="../lib/external/xui-2.0.0.js"></script>
-<script src="../lib/select_buttons.js"></script>
-<script src="../lib/uranium.js"></script>
+    <script src="../build/uranium.js"></script>
 <link rel="stylesheet" type='text/css' href='css/test.css' />
 <link rel="stylesheet" type='text/css' href='css/select_buttons.css' />
 </head>
