Basic sliding working

--- a/tests/carousel.html
+++ b/tests/carousel.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <title> Select Buttons Unit Tests</title>
-    <script src="uranium-unminified.js"></script>
+    <script src="../lib/external/xui-2.0.0.js"></script>
+    <script src="../lib/uranium_mixins.js"></script>
+    <script src="../lib/carousel.js"></script>
     <link rel="stylesheet" type='text/css' href='css/test.css' />
+    <link rel="stylesheet" type='text/css' href='css/carousel.css' />
   </head>
   
   <body suite='Carousel'>
