Basic snapping working -- but the offset spacings are off

--- a/tests/carousel.html
+++ b/tests/carousel.html
@@ -22,17 +22,19 @@
       
       <h3> Simple example. </h3>
       
-      <div data-ur-set='carousel' data-ur-carousel-component='container'>
-        <div data-ur-carousel-component='button prev' > </div>
-	<img data-ur-carousel-component='image' src='images/ci-1.png' />
-	<img data-ur-carousel-component='image' src='images/ci-2.png' />
-	<img data-ur-carousel-component='image' src='images/ci-1.png' />
-	<img data-ur-carousel-component='image' src='images/ci-2.png' />
-	<img data-ur-carousel-component='image' src='images/ci-1.png' />
-	<img data-ur-carousel-component='image' src='images/ci-2.png' />
-	<img data-ur-carousel-component='image' src='images/ci-1.png' />
-	<img data-ur-carousel-component='image' src='images/ci-2.png' />
-        <div data-ur-carousel-component='button next' > </div>
+      <div data-ur-set='carousel' data-ur-carousel-component='view_container'>
+        <div data-ur-carousel-component='scroll_container'>
+          <div data-ur-carousel-component='button prev' > </div>
+          <img data-ur-carousel-component='image' src='images/ci-1.png' />
+          <img data-ur-carousel-component='image' src='images/ci-2.png' />
+          <img data-ur-carousel-component='image' src='images/ci-1.png' />
+          <img data-ur-carousel-component='image' src='images/ci-2.png' />
+          <img data-ur-carousel-component='image' src='images/ci-1.png' />
+          <img data-ur-carousel-component='image' src='images/ci-2.png' />
+          <img data-ur-carousel-component='image' src='images/ci-1.png' />
+          <img data-ur-carousel-component='image' src='images/ci-2.png' />
+          <div data-ur-carousel-component='button next' > </div>
+        </div>
       </div>
     </div>
   </body>
