Adjusted code so the carousel works for any elements, not just images

--- a/tests/carousel.html
+++ b/tests/carousel.html
@@ -25,14 +25,14 @@
       <div data-ur-set='carousel' data-ur-carousel-component='view_container'>
         <div data-ur-carousel-component='scroll_container'>
           <div data-ur-carousel-component='button prev' > </div>
-          <img data-ur-carousel-component='image' src='images/ci-1.png' />
-          <img data-ur-carousel-component='image' src='images/ci-2.png' />
-          <img data-ur-carousel-component='image' src='images/ci-1.png' />
-          <img data-ur-carousel-component='image' src='images/ci-2.png' />
-          <img data-ur-carousel-component='image' src='images/ci-1.png' />
-          <img data-ur-carousel-component='image' src='images/ci-2.png' />
-          <img data-ur-carousel-component='image' src='images/ci-1.png' />
-          <img data-ur-carousel-component='image' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
           <div data-ur-carousel-component='button next' > </div>
         </div>
       </div>
