Updated callbacks to allow clicks to propagate through (on the phone)

--- a/tests/carousel.html
+++ b/tests/carousel.html
@@ -37,5 +37,12 @@
         </div>
       </div>
     </div>
+
+    <script type='text/javascript'>
+      x$("[data-ur-carousel-component='item']").on("click",
+      function(e) {console.log("You clicked:", e.target.src)});
+    </script>
+
+    
   </body>
 </html>
