--- a/tests/carousel.html
+++ b/tests/carousel.html
@@ -24,18 +24,23 @@
       <h3> Simple example. </h3>
       
       <div data-ur-set='carousel' data-ur-carousel-component='view_container'>
-        <div data-ur-carousel-component='scroll_container'>
-          <div data-ur-carousel-component='button prev' > </div>
-          <img data-ur-carousel-component='item' src='images/ci-1.png' />
-          <img data-ur-carousel-component='item' src='images/ci-2.png' />
-          <img data-ur-carousel-component='item' src='images/ci-1.png' />
-          <img data-ur-carousel-component='item' src='images/ci-2.png' />
-          <img data-ur-carousel-component='item' src='images/ci-1.png' />
-          <img data-ur-carousel-component='item' src='images/ci-2.png' />
-          <img data-ur-carousel-component='item' src='images/ci-1.png' />
-          <img data-ur-carousel-component='item' src='images/ci-2.png' />
-          <div data-ur-carousel-component='button next' > </div>
+        <span data-ur-carousel-component='count'> -- count -- </span>
+        <div data-ur-carousel-component='button'data-ur-carousel-button-type='prev' >
+          Prev
         </div>
+        <div data-ur-carousel-component='button' data-ur-carousel-button-type='next' >
+          Next
+        </div>
+        <div data-ur-carousel-component='scroll_container'>
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+        </div>       
       </div>
     </div>
 
