--- a/tests/carousel.html
+++ b/tests/carousel.html
@@ -44,6 +44,33 @@
       </div>
     </div>
 
+
+    <div class='test' name='Two'>
+      <h3> No-touch (just buttons) example. </h3>
+      
+      <div data-ur-set='carousel'
+        data-ur-carousel-component='view_container' data-ur-touch='disabled'>
+        <span data-ur-carousel-component='count'> -- count -- </span>
+        <div data-ur-carousel-component='button'data-ur-carousel-button-type='prev' >
+          Prev
+        </div>
+        <div data-ur-carousel-component='button' data-ur-carousel-button-type='next' >
+          Next
+        </div>
+        <div data-ur-carousel-component='scroll_container'>
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/ci-1.png' />
+          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+        </div>       
+      </div>
+    </div>
+
+    
     <script type='text/javascript'>
       x$("[data-ur-carousel-component='item']").on("click",
       function(e) {console.log("You clicked:", e.target.src)});
