Updated carousel to work with real DOCTYPES -- it needed to calculate the appropriate width for its container. Also updated the build and added DOCTYPES to the other examples / tested to make sure they work.

--- a/tests/select_buttons.html
+++ b/tests/select_buttons.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html>
 <head>
 <title> Select Buttons Unit Tests</title>
-    <script src="../build/uranium.js"></script>
+    <script src="../build/src/uranium.js"></script>
 <link rel="stylesheet" type='text/css' href='css/test.css' />
 <link rel="stylesheet" type='text/css' href='css/select_buttons.css' />
 </head>
