--- a/tests/carousel.html
+++ b/tests/carousel.html
@@ -3,9 +3,7 @@
   <head>
     <title> Select Buttons Unit Tests</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-    <script src="../lib/external/xui-2.0.0.js"></script>
-    <script src="../lib/uranium_mixins.js"></script>
-    <script src="../lib/carousel.js"></script>
+    <script src="../build/src/uranium-pretty.js"></script>
     <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/carousel.css' />
   </head>
